--- a/modules/task_1/miheev_i_mult_matrix_css_double/miheev_i_mult_matrix_css_double.tex
+++ b/modules/task_1/miheev_i_mult_matrix_css_double/miheev_i_mult_matrix_css_double.tex
@@ -252,10 +252,9 @@ SprMatCCS ParallelMult(SprMatCCS mat);
 \addcontentsline{toc}{section}{Приложение}
 Код лабораторной работы:
 
-\newline
 \textbf{Последовательная версия:}
 
-\newline matrix\_ccs.h
+matrix\_ccs.h
 
 \begin{lstlisting}
 // Copyright 2022 Miheev Ivan
@@ -309,7 +308,7 @@ class SprMatCCS {
 #endif  // MODULES_TASK_1_MIHEEV_I_MULT_MATRIX_CCS_DOUBLE_MATRIX_CCS_H_
 \end{lstlisting}
 
-\newline matrix\_ccs.cpp
+matrix\_ccs.cpp
 
 \begin{lstlisting}
 // Copyright 2022 Miheev Ivan
@@ -549,7 +548,7 @@ class SprMatCCS {
 #endif  // MODULES_TASK_2_MIHEEV_I_MULT_MATRIX_CCS_DOUBLE_OMP_MATRIX_CCS_OMP_H_
 \end{lstlisting}
 
-\newline matrix\_ccs\_omp.cpp
+matrix\_ccs\_omp.cpp
 
 \begin{lstlisting}
 // Copyright 2022 Miheev Ivan
@@ -846,7 +845,7 @@ class SprMatCCS {
 #endif  // MODULES_TASK_3_MIHEEV_I_MULT_MATRIX_CCS_DOUBLE_MATRIX_CCS_TBB_H_
 \end{lstlisting}
 
-\newline matrix\_ccs\_tbb.cpp
+matrix\_ccs\_tbb.cpp
 
 \begin{lstlisting}
 // Copyright 2022 Miheev Ivan
@@ -1083,7 +1082,7 @@ void SprMatCCS::shwVal() {
 \end{lstlisting}
 
 \newpage
-\newline main.cpp
+main.cpp
 
 \begin{lstlisting}
 // Copyright 2022 Miheev Ivan
