--- a/modules/task_1/miheev_i_mult_matrix_css_double/miheev_i_mult_matrix_css_double.tex
+++ b/modules/task_1/miheev_i_mult_matrix_css_double/miheev_i_mult_matrix_css_double.tex
@@ -88,7 +88,7 @@
 
 \section*{Введение}
 \addcontentsline{toc}{section}{Введение}
-\parПо сравнению с привычными нам плотными матрицами, где большинство значений отличны от нуля, разреженные матрицы, о которых пойдет речь в данной лабораторной работе, наоборот содержат в основном нулевые значения. Особенность данной формулировки заключается в отсутствии четкого понимания, какое именно количество ненулевых элементов делает матрицу разреженной. Обычно говорят, что матрица разрежена, если она содержит не более $\mathbb{O(n)}$ отличных от нуля элементов. В противном случае матрица считается плотной. Типичным случаем разреженности является ограниченность числа ненулевых элементов в одной строке.
+\parПо сравнению с привычными нам плотными матрицами, где большинство значений отличны от нуля, разреженные матрицы, о которых пойдет речь в данной лабораторной работе, наоборот содержат в основном нулевые значения. Особенность данной формулировки заключается в отсутствии четкого понимания, какое именно количество ненулевых элементов делает матрицу разреженной. Обычно говорят, что матрица разрежена, если она содержит не более O(n) отличных от нуля элементов. В противном случае матрица считается плотной. Типичным случаем разреженности является ограниченность числа ненулевых элементов в одной строке.
 \parИспользование разреженных матриц широко распространены в научных и инженерных областях, например, в программах и алгоритмах, где используются данные, которые содержат счетчики, кодировки, также их использование можно найти во многих подполях машинного обучения.
 \parВ вычислительном отношении неразумно работать с разреженными матрицами, как с плотными, хотя и при правильной реализации алгоритмов в обоих случаях будут получены правильные результаты, но использование специализированных способов представления и обработки матриц можно добиться значительного прироста производительности. Существует много по-своему эффективных форматов хранения и обработки разреженных, однако в рамках данной работы рассматривается лишь один из таких способов — столбцовый метод хранения матрицы CCS. Для анализа временной сложности таких вычислений будут использоваться два типа технологии разработки параллельных программ в системах с общей памятью.
 \newpage
