--- a/modules/task_1/miheev_i_mult_matrix_css_double/miheev_i_mult_matrix_css_double.tex
+++ b/modules/task_1/miheev_i_mult_matrix_css_double/miheev_i_mult_matrix_css_double.tex
@@ -20,6 +20,8 @@
 
 \setlength{\parskip}{0.5cm}
 \setlist{nolistsep, itemsep=0.3cm, parsep=0pt}
+
+\usepackage{listings}
 \lstset{language=C++,
         basicstyle=\footnotesize,
         keywordstyle=\color{blue}\ttfamily,
@@ -32,7 +34,9 @@
         title=\lstname}
 
 \begin{document}
+
 \begin{titlepage}
+
 \begin{center}
     Министерство образования и науки Российской Федерации \\
     Федеральное государственное автономное образовательное учреждение высшего образования
@@ -66,8 +70,6 @@
 студент группы 381906-3 \\
 Михеев И.А. \\
 
-\vspace
-
 \textbf{Проверил:} \\
 доцент кафедры МОСТ, \\
 кандидат технических наук \\
@@ -88,7 +90,7 @@
 
 \section*{Введение}
 \addcontentsline{toc}{section}{Введение}
-\parПо сравнению с привычными нам плотными матрицами, где большинство значений отличны от нуля, разреженные матрицы, о которых пойдет речь в данной лабораторной работе, наоборот содержат в основном нулевые значения. Особенность данной формулировки заключается в отсутствии четкого понимания, какое именно количество ненулевых элементов делает матрицу разреженной. Обычно говорят, что матрица разрежена, если она содержит не более $\mathbb{O(n)}$ отличных от нуля элементов. В противном случае матрица считается плотной. Типичным случаем разреженности является ограниченность числа ненулевых элементов в одной строке.
+\parПо сравнению с привычными нам плотными матрицами, где большинство значений отличны от нуля, разреженные матрицы, о которых пойдет речь в данной лабораторной работе, наоборот содержат в основном нулевые значения. Особенность данной формулировки заключается в отсутствии четкого понимания, какое именно количество ненулевых элементов делает матрицу разреженной. Обычно говорят, что матрица разрежена, если она содержит не более O(n) отличных от нуля элементов. В противном случае матрица считается плотной. Типичным случаем разреженности является ограниченность числа ненулевых элементов в одной строке.
 \parИспользование разреженных матриц широко распространены в научных и инженерных областях, например, в программах и алгоритмах, где используются данные, которые содержат счетчики, кодировки, также их использование можно найти во многих подполях машинного обучения.
 \parВ вычислительном отношении неразумно работать с разреженными матрицами, как с плотными, хотя и при правильной реализации алгоритмов в обоих случаях будут получены правильные результаты, но использование специализированных способов представления и обработки матриц можно добиться значительного прироста производительности. Существует много по-своему эффективных форматов хранения и обработки разреженных, однако в рамках данной работы рассматривается лишь один из таких способов — столбцовый метод хранения матрицы CCS. Для анализа временной сложности таких вычислений будут использоваться два типа технологии разработки параллельных программ в системах с общей памятью.
 \newpage
@@ -252,10 +254,9 @@ SprMatCCS ParallelMult(SprMatCCS mat);
 \addcontentsline{toc}{section}{Приложение}
 Код лабораторной работы:
 
-\newline
 \textbf{Последовательная версия:}
 
-\newline matrix\_ccs.h
+matrix\_ccs.h
 
 \begin{lstlisting}
 // Copyright 2022 Miheev Ivan
@@ -309,7 +310,7 @@ class SprMatCCS {
 #endif  // MODULES_TASK_1_MIHEEV_I_MULT_MATRIX_CCS_DOUBLE_MATRIX_CCS_H_
 \end{lstlisting}
 
-\newline matrix\_ccs.cpp
+matrix\_ccs.cpp
 
 \begin{lstlisting}
 // Copyright 2022 Miheev Ivan
@@ -549,7 +550,7 @@ class SprMatCCS {
 #endif  // MODULES_TASK_2_MIHEEV_I_MULT_MATRIX_CCS_DOUBLE_OMP_MATRIX_CCS_OMP_H_
 \end{lstlisting}
 
-\newline matrix\_ccs\_omp.cpp
+matrix\_ccs\_omp.cpp
 
 \begin{lstlisting}
 // Copyright 2022 Miheev Ivan
@@ -846,7 +847,7 @@ class SprMatCCS {
 #endif  // MODULES_TASK_3_MIHEEV_I_MULT_MATRIX_CCS_DOUBLE_MATRIX_CCS_TBB_H_
 \end{lstlisting}
 
-\newline matrix\_ccs\_tbb.cpp
+matrix\_ccs\_tbb.cpp
 
 \begin{lstlisting}
 // Copyright 2022 Miheev Ivan
@@ -1083,7 +1084,7 @@ void SprMatCCS::shwVal() {
 \end{lstlisting}
 
 \newpage
-\newline main.cpp
+main.cpp
 
 \begin{lstlisting}
 // Copyright 2022 Miheev Ivan
